Adicionados Layouts novos, classes de editar paciente, medico e consulta e feita logica inicial de cadastro, e consultas.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ActivityCadastros" />
+        <activity android:name=".ActivityConsultas" />
     </application>
 
 </manifest>
